[package]
name = "radix-clis"
version = "1.3.0"
edition = "2021"
description = "A collection of CLIs for developing, building and testing Scrypto code, from the Radix DLT project."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
radix-blueprint-schema-init = { workspace = true, features = ["std"] }
radix-common = { workspace = true, features = ["std"] }
radix-engine = { workspace = true, features = ["std"] }
radix-engine-interface = { workspace = true, features = ["std"] }
radix-engine-profiling = { workspace = true, features = ["ram_metrics"] }
radix-rust = { workspace = true, features = ["std"] }
radix-substate-store-impls = { workspace = true, features = ["std", "rocksdb"] }
radix-substate-store-interface = { workspace = true, features = ["std"] }
radix-substate-store-queries = { workspace = true, features = ["std"] }
radix-transactions = { workspace = true, features = ["std"] }
sbor = { workspace = true, features = ["std"] }
scrypto-bindgen = { workspace = true, features = ["std"] }
scrypto-compiler = { workspace = true, features = ["std"] }

flate2 = { workspace = true }
tar = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
dirs = { workspace = true }
colored = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
temp-env = { workspace = true }
quote = { workspace = true }
tempfile = { workspace = true }
flume = { workspace = true }
walkdir = { workspace = true }

[[bin]]
name = "resim"
path = "src/bin/resim.rs"
bench = false

[[bin]]
name = "scrypto"
path = "src/bin/scrypto.rs"
bench = false

[[bin]]
name = "rtmc"
path = "src/bin/rtmc.rs"
bench = false

[[bin]]
name = "rtmd"
path = "src/bin/rtmd.rs"
bench = false

[[bin]]
name = "scrypto-bindgen"
path = "src/bin/scrypto_bindgen.rs"
bench = false

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
bench = false

[lib]
bench = false
