[package]
name = "radix-engine-common-macros"
version = "1.2.0-dev"
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
paste = { workspace = true }
radix-engine-common= { workspace = true }

[lib]
doctest = false
proc-macro = true
bench = false

[features]
default = ["std"]
std = ["radix-engine-common/std"]
alloc = ["radix-engine-common/alloc"]
