[package]
name = "radix-engine-common"
version = "1.1.0-dev"
edition = "2021"

[dependencies]
sbor = { path = "../sbor", default-features = false }
utils = { path = "../utils", default-features = false }
radix-engine-derive = { path = "../radix-engine-derive", default-features = false }

serde = { version = "1.0.137", default-features = false, optional = true, features=["derive"] }
hex = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
bnum = { version = "0.7.0", default-features = false, features = ["numtraits"] }
bech32 = { version = "0.9.0", default-features = false }
paste = { version = "1.0.13" }
blake2 = { version = "0.10.6", default-features = false }
lazy_static = "1.4.0"
strum = { version = "0.24", default-features = false, features = ["derive"] }
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
# This is for math benchmarks for comparison purposes.
# Fast alternative to bigint but unfortunately not cross-compiled to WASM
rug = { version = "1.18", optional = true }
ethnum = {version = "1.3.2", default-features = false, optional = true }

ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
secp256k1 = { version = "0.24.0", default-features = false, features = ["recovery"] }
blst = { version = "0.3.11", default-features = false, optional = false }
sha3 = { version = "0.10.8", default-features = false, optional = false }

[dev-dependencies]
serde_json = { version = "1.0.81", default-features = false }
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "math"
harness = false

[[bench]]
name = "schema"
harness = false

[features]
# You should enable either `std` or `alloc`
default = ["std"]
serde = ["dep:serde", "utils/serde", "sbor/serde", "hex/serde"]
std = ["hex/std", "sbor/std", "utils/std", "radix-engine-derive/std", "serde_json/std", "ed25519-dalek/std", "secp256k1/std", "blake2/std", "sha3/std" ]
alloc = ["hex/alloc", "sbor/alloc", "utils/alloc", "radix-engine-derive/alloc", "serde_json/alloc", "ed25519-dalek/alloc", "secp256k1/alloc", "lazy_static/spin_no_std", "blst/no-threads" ]

# This flag is set by fuzz-tests framework and it is used to disable/enable some optional features
# to let fuzzing work
radix_engine_fuzzing = ["arbitrary", "serde", "bnum/arbitrary", "bnum/serde", "sbor/radix_engine_fuzzing", "utils/radix_engine_fuzzing"]

resource_tracker=[]
full_math_benches = [ "dep:rug", "dep:ethnum"]

coverage = []

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
doctest = false
bench = false
