[package]
name = "radix-engine-derive"
version = "1.0.2-dev"
edition = "2021"

[lib]
doctest = false
proc-macro = true
bench = false

[dependencies]
proc-macro2 = { version = "1.0.38" }
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.93", features = ["full", "extra-traits"] }
quote = { version = "1.0.18" }
sbor-derive-common = { path = "../sbor-derive-common" }

[features]
# Currently, dependencies of procedural macros are imported to host crates. This may accidentally 
# enable unwanted features of host dependencies, i.e. `serde`, `serde_json`, `sbor` and `scrypto-abi`.
# 
# To work around with it, we've added features `std` and `alloc` for `scrypto-derive`, even
# though it only works under `std` environment.
#
# See:
# - https://github.com/rust-lang/cargo/issues/5730
# - https://github.com/rust-lang/cargo/issues/7915
#
default = ["std"]
std = []
alloc = []

# Enable trace
trace = ["sbor-derive-common/trace"]
