[package]
name = "radix-engine-interface"
version = "1.3.0"
edition = "2021"
description = "The interface between system layer and VM layer, from the Radix DLT project."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
sbor = { workspace = true }
radix-common = { workspace = true }
radix-common-derive = { workspace = true }
radix-blueprint-schema-init = { workspace = true }
radix-rust = { workspace = true }

hex = { workspace = true }
strum = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }
serde = { workspace = true, optional = true, features=["derive"] }
serde_json = { workspace = true }
lazy_static = { workspace = true }
const-sha1 = { workspace = true } 
arbitrary = { workspace = true, features = ["derive"], optional = true }
paste = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
radix-common = { workspace = true, features = ["secp256k1_sign_and_validate"] }

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["hex/std", "serde_json/std", "sbor/std", "radix-blueprint-schema-init/std", "radix-common/std", "radix-common-derive/std", "strum/std", "radix-rust/std", "serde?/std"]
alloc = ["hex/alloc", "serde_json/alloc", "sbor/alloc", "radix-blueprint-schema-init/alloc", "radix-common/alloc", "radix-common-derive/alloc", "radix-rust/alloc", "serde?/alloc"]

# This flag is set by fuzz-tests framework and it is used to disable/enable some optional features
# to let fuzzing work
fuzzing = ["arbitrary", "sbor/fuzzing", "radix-common/fuzzing", "radix-rust/fuzzing", "dep:serde"]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
