[package]
name = "radix-engine-macros"
version = "0.13.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.93", features = ["full", "extra-traits"] }
radix-engine-common = { path = "../radix-engine-common" }

[lib]
doctest = false
proc-macro = true
bench = false
