[package]
name = "radix-engine-macros"
version = "1.0.1-dev"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.93", features = ["full", "extra-traits"] }
paste = { version = "1.0.13" }
radix-engine-common= { path = "../radix-engine-common", default-features = false }

[lib]
doctest = false
proc-macro = true
bench = false

[features]
default = ["std"]
std = ["radix-engine-common/std"]
alloc = ["radix-engine-common/alloc"]
