[package]
name = "radix-engine-profiling-derive"
version = "1.2.0-dev"
edition = "2021"
license = "Radix License 1.0"
description = "Macro for profiling to any function inside engine implementation."

[lib]
doctest = false
proc-macro = true
bench = false

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
radix-engine-profiling = { workspace = true }

[features]
default = []
resource_tracker = []

