[package]
name = "radix-engine-profiling-macros"
version = "1.2.0-dev"
edition = "2021"

[lib]
doctest = false
proc-macro = true
bench = false

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
radix-engine-profiling = { workspace = true }

[features]
default = []
resource_tracker = []

