[package]
name = "radix-engine-profiling"
version = "1.2.0-dev"
edition = "2021"
license = "Radix License 1.0"
description = "A library for Radix Engine profiling."

[dependencies]
radix-substate-store-interface = { workspace = true, optional = true }
radix-substate-store-impls = { workspace = true, optional = true }
radix-common = { workspace = true, optional = true }
radix-engine-interface = { workspace = true, optional = true }
fixedstr = { workspace = true }
shared_memory = { workspace = true, optional = true }
plotters = { workspace = true, optional = true }
linreg = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[lib]
doctest = false
bench = false

[features]
default = []
resource_tracker = ["dep:shared_memory"]
rocksdb = ["dep:plotters", "dep:linreg", "dep:blake2", "dep:rand", "radix-substate-store-impls/std", 
           "radix-substate-store-interface/std", "radix-common/std", "radix-engine-interface/std"]
ram_metrics = []
