[package]
name = "radix-engine-profiling"
version = "1.2.0"
edition = "2021"
description = "A library used by Radix Engine profiling, from the Radix DLT project."
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/radixdlt/radixdlt-scrypto"

[dependencies]
radix-substate-store-interface = { workspace = true, optional = true }
radix-substate-store-impls = { workspace = true, optional = true }
radix-common = { workspace = true, optional = true }
radix-engine-interface = { workspace = true, optional = true }
fixedstr = { workspace = true }
shared_memory = { workspace = true, optional = true }
plotters = { workspace = true, optional = true }
linreg = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[lib]
doctest = false
bench = false

[features]
default = []
resource_tracker = ["dep:shared_memory", "radix-common/resource_tracker"]
rocksdb = ["dep:plotters", "dep:linreg", "dep:blake2", "dep:rand", "radix-substate-store-impls/std", 
           "radix-substate-store-interface/std", "radix-common/std", "radix-engine-interface/std"]
ram_metrics = []
