[package]
name = "radix-engine-store-interface"
version = "0.10.0"
edition = "2021"

[dependencies]
sbor = { path = "../sbor", default-features = false }
utils = { path = "../utils", default-features = false }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
radix-engine-derive = { path = "../radix-engine-derive", default-features = false }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
itertools = { version = "0.10.3", default-features = false }
hex = { version = "0.4.3", default-features = false }

[features]
default = ["std"]
std = ["hex/std", "utils/std", "sbor/std", "radix-engine-derive/std", "radix-engine-common/std", "radix-engine-interface/std", "itertools/use_std"]
alloc = ["hex/alloc", "utils/alloc", "sbor/alloc", "radix-engine-derive/alloc", "radix-engine-common/alloc", "radix-engine-interface/alloc", "itertools/use_alloc"]


# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
