[package]
name = "radix-engine-stores"
version = "0.10.0"
edition = "2021"

[dependencies]
sbor = { path = "../sbor", default-features = false }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
rocksdb = { version = "0.19.0", optional = true }
itertools = { version = "0.10.3", default-features = false }
hex = { version = "0.4.3", default-features = false }

[features]
default = ["std"]
std = ["hex/std", "sbor/std", "radix-engine-interface/std", "itertools/use_std"]
alloc = ["hex/alloc", "sbor/alloc", "radix-engine-interface/alloc", "itertools/use_alloc"]

rocksdb = ["dep:rocksdb"]

# Ref: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
