[package]
name = "radix-engine-tests"
version = "1.2.0-dev"
edition = "2021"
build = "build.rs"

[dependencies]
native-sdk = { path = "../native-sdk", default-features = false }
sbor = { path = "../sbor", default-features = false }
radix-engine = { path = "../radix-engine", default-features = false, features = ["radix_engine_tests"] }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
substate-store-interface = { path = "../substate-store-interface", default-features = false }
substate-store-impls = { path = "../substate-store-impls", default-features = false }
substate-store-queries = { path = "../substate-store-queries", default-features = false }
transaction = { path = "../transaction", default-features = false }
transaction-scenarios = { path = "../transaction-scenarios", default-features = false }
blueprint-schema-init = { path = "../blueprint-schema-init", default-features = false }
utils = { path = "../utils", default-features = false }
radix-engine-profiling = { path = "../radix-engine-profiling", optional = true, features = ["resource_tracker"]}
resources-tracker-macro = { path = "../radix-engine-profiling/resources-tracker-macro" }
scrypto-test = { path = "../scrypto-test", default-features = false }
lazy_static = { version = "1.4.0" }

[dev-dependencies]
transaction = { path = "../transaction", default-features = false }
wabt = { version = "0.10.0" }
criterion = { version = "0.3", features = ["html_reports"] }
scrypto = { path = "../scrypto", default-features = false }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
rayon = "1.5.3"
serde = { version = "1.0.144", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
crossbeam = { version = "0.8.2" }
walkdir = { version = "2.3.3" }
paste = { version = "1.0.13" }
hex = { version = "0.4.3", default-features = false }
trybuild = { version = "1.0.85" }
automod = "1.0.13"

[build-dependencies]
walkdir = { version = "2.3.3", optional = true }
cargo_toml = { version = "0.15.3", optional = true }
scrypto = { path = "../scrypto", default-features = false }
scrypto-test = { path = "../scrypto-test", default-features = false }

[[bench]]
name = "costing"
harness = false

[[bench]]
name = "radiswap"
harness = false

[[bench]]
name = "transfer"
harness = false

[[bench]]
name = "resources_usage"
harness = false
required-features = ["cpu_ram_metrics"]

[[bench]]
name = "transaction_processing"
harness = false

[[bench]]
name = "transaction_validation"
harness = false

[lib]
bench = false
test = false

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "transaction/std", "blueprint-schema-init/std", "transaction-scenarios/std", "radix-engine/std", "radix-engine/moka", "radix-engine-interface/std", "substate-store-impls/std", "substate-store-interface/std", "substate-store-queries/std", "utils/std", "scrypto/std", "scrypto-test/std", "scrypto-test/std", "scrypto-test/moka"]
alloc = ["sbor/alloc", "transaction/alloc", "blueprint-schema-init/alloc", "transaction-scenarios/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-interface/alloc", "substate-store-impls/alloc", "substate-store-interface/alloc", "substate-store-queries/alloc", "utils/alloc", "scrypto/alloc", "scrypto-test/alloc", "scrypto-test/alloc", "scrypto-test/lru"]
wasmer = ["radix-engine/wasmer"]
cpu_ram_metrics = ["radix-engine/cpu_ram_metrics"]
flamegraph = []
resource_tracker = ["dep:radix-engine-profiling", "resources-tracker-macro/resource_tracker", "radix-engine/resource_tracker", "radix-engine-common/resource_tracker", "scrypto-test/resource_tracker"]
dump_manifest_to_file = ["transaction/dump_manifest_to_file"]
rocksdb = ["scrypto-test/rocksdb"]
post_run_db_check = ["scrypto-test/post_run_db_check"]

# If this feature is enabled, this crate will compile all of the blueprints ahead of time and make
# them available for use.
compile-blueprints-at-build-time = ["dep:walkdir", "dep:cargo_toml"]
