[package]
name = "radix-engine-tests"
version = "1.2.0-dev"
edition = "2021"
build = "build.rs"

[dependencies]
native-sdk = { workspace = true }
sbor = { workspace = true }
radix-engine = { workspace = true, features = ["radix_engine_tests"] }
radix-engine-interface = { workspace = true }
radix-engine-common = { workspace = true }
substate-store-interface = { workspace = true }
substate-store-impls = { workspace = true }
substate-store-queries = { workspace = true }
transaction = { workspace = true }
transaction-scenarios = { workspace = true }
blueprint-schema-init = { workspace = true }
radix-rust = { workspace = true }
radix-engine-profiling = { workspace = true, optional = true, features = ["resource_tracker"]}
radix-engine-profiling-macros = { workspace = true }
scrypto-test = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
transaction = { workspace = true }
wabt = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
scrypto = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }
walkdir = { workspace = true }
paste = { workspace = true }
hex = { workspace = true }
trybuild = { workspace = true }
automod = { workspace = true }

[build-dependencies]
walkdir = { workspace = true, optional = true }
cargo_toml = { workspace = true, optional = true }
scrypto = { workspace = true }
scrypto-test = { workspace = true }

[[bench]]
name = "costing"
harness = false

[[bench]]
name = "radiswap"
harness = false

[[bench]]
name = "transfer"
harness = false

[[bench]]
name = "resources_usage"
harness = false
required-features = ["cpu_ram_metrics"]

[[bench]]
name = "transaction_processing"
harness = false

[[bench]]
name = "transaction_validation"
harness = false

[lib]
bench = false
test = false

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "transaction/std", "blueprint-schema-init/std", "radix-engine-common/std", "transaction-scenarios/std", "radix-engine/std", "radix-engine/moka", "radix-engine-interface/std", "substate-store-impls/std", "substate-store-interface/std", "substate-store-queries/std", "radix-rust/std", "scrypto/std", "scrypto-test/std", "scrypto-test/std", "scrypto-test/moka"]
alloc = ["sbor/alloc", "transaction/alloc", "blueprint-schema-init/alloc", "radix-engine-common/alloc", "transaction-scenarios/alloc", "radix-engine/alloc", "radix-engine/lru", "radix-engine-interface/alloc", "substate-store-impls/alloc", "substate-store-interface/alloc", "substate-store-queries/alloc", "radix-rust/alloc", "scrypto/alloc", "scrypto-test/alloc", "scrypto-test/alloc", "scrypto-test/lru"]
wasmer = ["radix-engine/wasmer"]
cpu_ram_metrics = ["radix-engine/cpu_ram_metrics"]
flamegraph = []
resource_tracker = ["dep:radix-engine-profiling", "radix-engine-profiling-macros/resource_tracker", "radix-engine/resource_tracker", "radix-engine-common/resource_tracker", "scrypto-test/resource_tracker"]
dump_manifest_to_file = ["transaction/dump_manifest_to_file"]
rocksdb = ["scrypto-test/rocksdb"]
post_run_db_check = ["scrypto-test/post_run_db_check"]

# If this feature is enabled, this crate will compile all of the blueprints ahead of time and make
# them available for use.
compile-blueprints-at-build-time = ["dep:walkdir", "dep:cargo_toml"]
